lxl-backend-douban/istio/movie-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: movie-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movie
spec:
  hosts:
  - "*"
  gateways:
  - movie-gateway
  http:
  - match:
    - uri:
        prefix: /index
    - uri:
        prefix: /image
    - uri:
        prefix: /js
    route:
    - destination:
        host: movie-web
        port:
          number: 18081
