lxl-backend-douban/istio/virtual-service-rating-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: movie-rating
spec:
  hosts:
  - movie-rating
  http:
  - route:
    - destination:
        host: movie-rating
        subset: v2
